<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/Home_vector"/>
    <item
        android:id="@+id/productFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_list_alt_24"
        android:title="@string/Producto"/>
    <item
        android:id="@+id/commentFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_comment_24"
        android:title="@string/comentario_vector"/>

    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/Profile"/>
</menu>