<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.myapplication.UI.Fragmentos.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first"/>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.myapplication.UI.Fragmentos.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second"/>
    <fragment
        android:id="@+id/linearLayoutExample"
        android:name="com.example.myapplication.UI.Fragmentos.LinearLayoutExample"
        android:label="fragment_linear_layout_example"
        tools:layout="@layout/fragment_linear_layout_example" />
    <fragment
        android:id="@+id/commentFragment"
        android:name="com.example.myapplication.UI.Fragmentos.CommentFragment"
        android:label="@string/comentario_vector"
        tools:layout="@layout/fragment_comment" />
    <fragment
        android:id="@+id/productFragment"
        android:name="com.example.myapplication.UI.Fragmentos.ProductFragment"
        android:label="@string/Producto"
        tools:layout="@layout/fragment_product" >
        <action
            android:id="@+id/action_productFragment_to_detailProductFragment"
            app:destination="@id/detailProductFragment" />
    </fragment>
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.myapplication.UI.Fragmentos.HomeFragment"
        android:label="@string/Home_vector"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.myapplication.UI.Fragmentos.ProfileFragment"
        android:label="@string/Profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/detailProductFragment"
        android:name="com.example.myapplication.UI.Fragmentos.DetailProductFragment"
        android:label="@string/DetalleProduct"
        tools:layout="@layout/fragment_detail_product" />
</navigation>