<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Fragmentos.FirstFragment">

    <!--<TextView
        android:id="@+id/textview_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/hello_first_fragment"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent" />-->

//////////// EString Horizontal
    <!--<Button
        android:id="@+id/button_first4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_first5"
        app:layout_constraintHorizontal_chainStyle="packed"
        />
    <Button
        android:id="@+id/button_first5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next2"
        app:layout_constraintTop_toTopOf="@id/button_first4"
        app:layout_constraintBottom_toBottomOf="@id/button_first4"
        app:layout_constraintLeft_toRightOf="@id/button_first4"
        app:layout_constraintRight_toLeftOf="@id/button_first6"
        />
    <Button
        android:id="@+id/button_first6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next3"
        app:layout_constraintTop_toTopOf="@id/button_first5"
        app:layout_constraintBottom_toBottomOf="@id/button_first5"
        app:layout_constraintLeft_toRightOf="@id/button_first5"
        app:layout_constraintRight_toRightOf="parent"
        />
-->
    ////////cadena vertical/////

    <Button
        android:id="@+id/button_first4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintBottom_toTopOf="@id/button_first5"
        app:layout_constraintVertical_chainStyle="spread_inside"
        />
    <Button
        android:id="@+id/button_first5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next2"
        app:layout_constraintTop_toBottomOf="@id/button_first4"
        app:layout_constraintBottom_toTopOf="@id/button_first6"
        app:layout_constraintLeft_toLeftOf="@id/button_first4"
        app:layout_constraintRight_toRightOf="@id/button_first4"

        />
    <Button
        android:id="@+id/button_first6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next3"
        app:layout_constraintTop_toBottomOf="@id/button_first5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/button_first5"
        app:layout_constraintRight_toRightOf="@id/button_first5"
        />

 ////////////////////////liner layout con graviti
    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/button_first"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_first">


        <Button
            android:id="@+id/button_first1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/boton3" />

        <Button
            android:id="@+id/button_first2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_boton2"


             />

    </LinearLayout>
/////////// boton que pasa a el otro fragmento
    <Button
        android:id="@+id/button_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_first"
        app:layout_constraintVertical_bias="0.588" />
///////////Boton que suma los clikcks
    <Button
        android:id="@+id/button_numero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_boton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_first" />
-->
</androidx.constraintlayout.widget.ConstraintLayout>




